--- a/amazon.html
+++ b/amazon.html
@@ -49,9 +49,7 @@
       </div>
     </div>
 
-
-      <script src="./data/products.js"></script>
-    <script src="./scripts/amazone.js"></script>
-    <script src="./data/cart.js"></script>
+ 
+    <script type="module" src="./scripts/amazone.js"></script> 
   </body>
 </html>
